docs: fix toolbar z-index

--- a/docs/src/app/(public)/(content)/react/components/toolbar/demos/hero/css-modules/index.module.css
+++ b/docs/src/app/(public)/(content)/react/components/toolbar/demos/hero/css-modules/index.module.css
@@ -140,6 +140,7 @@
   outline: 0;
   -webkit-user-select: none;
   user-select: none;
+  z-index: 1;
 }
 
 .Popup {
